<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:isScrollContainer="true"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_marginTop="43dp"
        android:textSize="24pt"
        android:textColor="#2887d8"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        >
    <Button
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:text="@string/botao1"
        android:id="@+id/bt1"
        android:gravity="center"
        android:background="@drawable/bluebutton"
        android:textColor="#FFFFFF"
        android:onClick="lista_necessarios" />

    <Button
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/botao2"
        android:id="@+id/bt2"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bluebutton"
        android:textColor="#FFFFFF"
        android:onClick="nova_lista" />
</LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        >
    <Button
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:text="@string/botao3"
        android:id="@+id/bt3"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bluebutton"
        android:textColor="#FFFFFF"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/botao4"
        android:id="@+id/bt4"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/bt3"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/bluebutton"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        />
    </LinearLayout>
</LinearLayout>
